RESOLVED FIXED143890
Fix NetworkCache Statistics database bootstrapping after r182803
https://bugs.webkit.org/show_bug.cgi?id=143890
Summary Fix NetworkCache Statistics database bootstrapping after r182803
Chris Dumez
Reported 2015-04-17 12:17:34 PDT
r182803 updated the NetworkCache storage format and the NetworkCache Statistics database bootstrapping code needs to be updated as a result.
Attachments
Patch (4.39 KB, patch)
2015-04-17 12:23 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-04-17 12:23:53 PDT
WebKit Commit Bot
Comment 2 2015-04-18 07:43:13 PDT
Comment on attachment 251038 [details] Patch Clearing flags on attachment: 251038 Committed r182983: <http://trac.webkit.org/changeset/182983>
WebKit Commit Bot
Comment 3 2015-04-18 07:43:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.