Source/WebKit2/NetworkProcess/cache/NetworkCache.h
@@ -103,7 +103,7 @@ public:
 
     void dumpContentsToFile();
 
-    String storagePath() const;
+    String recordsPath() const;
 
 private:
     Cache() = default;
